[package]
name = "unifeb"
version = "0.1.1"
edition = "2021"
keywords = ["UniFrac", "embedding", "dimension reduction", "microbiome"]

[net]
git-fetch-with-cli = true

[dependencies]
rayon = "1.10"
ndarray = "0.16"
clap = "4.3"
log = { version = "0.4" }
env_logger = { version = "0.11" }
anndists = { git = "https://github.com/jbk708/anndists.git", rev = "c3aad712" }
anyhow = { version = "1.0.58" }
csv = { version = "1.1" }
annembed = { git = "https://github.com/jbk708/annembed.git", rev = "6327ee8d", default-features = false, features = ["simdeez_f", "intel-mkl-static"] }
#hnsw_rs = {git = "https://github.com/jean-pierreBoth/hnswlib-rs", features = ["simdeez_f"]}
#hnsw_rs = {path = "../hnswlib-rs-new", features = ["simdeez_f"]}
#hnsw_rs = { git = "https://github.com/jianshu93/hnswlib-rs", rev = "97dcc91a2772b6371159eb010b6fed9f460df879", features = ["simdeez_f"] }
#hnsw_rs = { path = "../hnswlib-rs", features = ["simdeez_f"] }

hnsw_rs = { git = "https://github.com/jbk708/hnswlib-rs.git", rev = "e6ee07e0", features = ["simdeez_f"] }

[patch.crates-io]
# Ensure any dependency asking for hnsw_rs (crates.io) uses the user's git fork
hnsw_rs = { git = "https://github.com/jbk708/hnswlib-rs.git", rev = "e6ee07e0" }

