[package]
name = "unifeb"
version = "0.1.1"
edition = "2021"
keywords = ["UniFrac", "embedding", "dimension reduction", "microbiome"]

[net]
git-fetch-with-cli = true

[dependencies]
rayon = "1.10"
ndarray = "0.16"
clap = "4.3"
log = { version = "0.4" }
env_logger = { version = "0.11" }
anndists = { git = "https://github.com/jbk708/anndists.git", branch = "cleanup" }
anyhow = { version = "1.0.58" }
csv = { version = "1.1" }
annembed = { git = "https://github.com/jbk708/annembed.git", branch = "master", default-features = false, features = ["simdeez_f", "intel-mkl-static"] }
hnsw_rs = { git = "https://github.com/jbk708/hnswlib-rs.git", branch = "master", features = ["simdeez_f"] }

[patch.crates-io]
# Ensure any dependency asking for hnsw_rs (crates.io) uses the user's git fork
hnsw_rs = { git = "https://github.com/jbk708/hnswlib-rs.git", branch = "master" }

